# hack-a-product

./: .gitignore  AGENTIC_APP_PLAN.md  AWS_PERMISSIONS_SETUP.md  DESTROY_INFRASTRUCTURE.md  Dockerfile  FIX_TERRAFORM.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  HACKATHON.md  HACKATHON_REQUIREMENTS_UPDATE.md  IMPROVEMENTS_SUMMARY.md  Makefile  NIM_INTEGRATION_GUIDE.md  PODMAN_QUICKFIX.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY_AUDIT_PUBLIC_REPO.md  SECURITY_CHECKLIST.md  SECURITY_FIXES.md  backend_env_example.txt  docker-compose.yml  expressions.txt  fix_backend_setup.sh  index.html  init_db.py  jest.config.js  kill_backend.sh  kill_dev.sh  package.json  playwright.config.ts  quick_setup.sh  security_scan.sh  setup_dev_env.py  setup_env.sh  test_backend_comprehensive.py  test_backend_running.py  test_backend_setup.py  test_backend_simple.py  test_basic_mcp.py  (+10 more)
backend/: Dockerfile  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_main_no_mcp.py  test_minimal.py  test_server.py  test_simple_main.py
backend/src/agentic_app/: __init__.py  main.py
backend/src/agentic_app/api/v1/: api.py
backend/src/agentic_app/api/v1/endpoints/: agents.py  ai_companion.py  (+5 more)
backend/src/agentic_app/core/: auth.py  config.py  database.py  logging.py  rate_limiter.py  sync_database.py
backend/src/agentic_app/mcp/: __init__.py  base_connector.py  models.py  orchestrator.py  router.py  server.py
backend/src/agentic_app/mcp/connectors/: __init__.py  cursor_connector.py  figma_connector.py  gemini_connector.py  github_connector.py  openai_connector.py
backend/src/agentic_app/models/: __init__.py  agent.py  api_key.py  project.py  task.py
backend/src/agentic_app/orchestration/: router.py  service.py
backend/src/agentic_app/orchestration/tools/: base.py  figma.py  gemini.py
backend/src/agentic_app/schemas/: __init__.py  agent.py  api_key.py  task.py
backend/src/agentic_app/services/: __init__.py  agent_service.py  ai_companion_service.py  api_key_service.py  nim_service.py  rag_service.py  task_service.py
(+76 files in other folders)
